# icloud-rs

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  rust-clippy.yml  security-audit.yml
cloudsync/: package-lock.json  package.json
cloudsync/src/: App.css  App.tsx  index.css
cloudsync/src-tauri/: Cargo.toml  tauri.conf.json
cloudsync/src-tauri/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: auth.rs  client.rs  downloader.rs  drive.rs  drive_vfs.rs  lib.rs  photos.rs  photos_vfs.rs
core/src/icloud/: mod.rs
core/src/icloud/core/: auth.rs  config.rs  downloader.rs  mod.rs
core/src/icloud/drive/: api.rs  mod.rs  vfs.rs
core/src/icloud/photos/: api.rs  vfs.rs
