[package]
name = "icloud-rs"
version = "0.1.0"
edition = "2021"
description = "A high-performance, async Rust client for Apple iCloud services."

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP Client (Must enable cookies and JSON)
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto (For token generation/validation)
ring = "0.17"
base64 = "0.22"

# Utilities
url = "2.5"
log = "0.4"
thiserror = "1.0" # Clean error handling for API failures
futures-util = "0.3"

# FUSE Virtual File System
fuser = "0.14"
libc = "0.2"

# Security & Persistence
keyring = "2.3"
directories = "5.0"
toml = "0.8"